--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>LazySloth — The Chill Memecoin</title>
+  <title>ChillSloth — The Chill Memecoin</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <!-- ✅ Logo / Favicon -->
   <link rel="icon" type="image/png" href="0.Banner.png" />
@@ -18,6 +18,11 @@
       --line:#444;
       --shadow:0 10px 30px rgba(0,0,0,.25);
       --maxw:1100px;
+      --black:#000;
+      --card:#0b0b0b;
+      --card2:#111;
+      --success:#1db954;
+      --danger:#e74c3c;
     }
 
     *{box-sizing:border-box}
@@ -30,7 +35,7 @@
       width:100%;
       display:flex;align-items:center;justify-content:flex-end;
       gap:10px;
-      padding:16px 60px 16px 24px; /* 👉 mehr Abstand rechts */
+      padding:16px 60px 16px 24px;
       background:transparent;
       position:absolute;top:0;left:0;right:0;
       z-index:10;
@@ -46,14 +51,11 @@
       font-weight:700;
       text-decoration:none;
       transition:.2s;
+      cursor:pointer;
     }
-    .btn:hover{
-      background:#000;
-      color:#fff;
-      border-color:#000;
-    }
+    .btn:hover{ background:#000; color:#fff; border-color:#000; }
 
-    /* Section 1 Hero mit Sonnenstrahlen */
+    /* Section 1 Hero */
     #s1{
       min-height:100vh;
       display:flex;flex-direction:column;align-items:center;justify-content:center;text-align:center;
@@ -89,75 +91,74 @@
     .socials img{width:44px;height:44px;transition:.2s}
     .socials img:hover{transform:scale(1.1)}
 
-    /* Section 2 */
+    /* Section 2 — unified background with Section 4 & Footer */
     #buy{
-      min-height:100vh;background:#000;color:var(--bg-light);
+      min-height:100vh;
+      background:linear-gradient(180deg,#000 0%, #0a0a0a 100%);
+      color:var(--bg-light);
       display:flex;flex-direction:column;text-align:center;
-      padding:0;
-      position:relative;
+      padding:0; position:relative;
     }
     #buy h2{margin:20px 0 12px}
     #buy .lead{margin-bottom:32px;color:var(--bg-light)}
+    .cta-row{ display:flex;gap:12px;justify-content:center;flex-wrap:wrap;margin-bottom:32px; }
     .buy-btn{
-      display:inline-block;background:#000;color:var(--bg-light);
+      display:inline-flex;align-items:center;justify-content:center;
+      background:#000;color:var(--bg-light);
       border:3px solid var(--bg-light);border-radius:1vh;
       padding:16px 40px;font-size:20px;font-weight:800;text-decoration:none;
-      box-shadow:var(--shadow);transition:.2s;margin-bottom:40px;
+      box-shadow:var(--shadow);transition:.2s;
+      white-space:nowrap; cursor:pointer; position:relative;
     }
     .buy-btn:hover{background:var(--bg-light);color:#000;border-color:var(--bg-dark)}
+    .buy-btn.copied::after{
+      content:"Copied!";
+      position:absolute; left:50%; top:-10px;
+      transform:translate(-50%,-100%);
+      background:#111; color:#fff;
+      border:1px solid #333; border-radius:8px;
+      padding:4px 8px; font-size:12px; font-weight:800;
+      opacity:0; pointer-events:none;
+      animation:pop 1.2s ease-out forwards;
+      box-shadow:0 6px 20px rgba(0,0,0,.35); white-space:nowrap;
+    }
+    @keyframes pop{
+      0%{opacity:0; transform:translate(-50%,-120%) scale(.96)}
+      10%{opacity:1; transform:translate(-50%,-100%) scale(1)}
+      90%{opacity:1;}
+      100%{opacity:0;}
+    }
+    @media (max-width:600px){ .buy-btn{padding:14px 24px;font-size:18px} }
+
     .steps{display:grid;grid-template-columns:1fr;gap:20px;max-width:1100px;width:100%;padding:0 16px;}
     @media(min-width:900px){.steps{grid-template-columns:repeat(4,1fr)}}
     .step{background:#111;border:1px solid var(--line);border-radius:12px;padding:20px;text-align:left}
     .step b{display:block;margin-bottom:8px;color:var(--bg-light)}
+    @media (max-width:899px){ #buy{padding-bottom:60px;} }
 
-    /* 👉 mehr Abstand unten bei Handy */
-    @media (max-width:899px){
-      #buy{padding-bottom:60px;}
-    }
-
-    /* 🚀 Banner ganz oben in Section 2 */
+    /* 🚀 Banner */
     .banner{
       background:rgba(0,0,0,0.3);
       color:#fff;
       overflow:hidden; padding:10px 0;
-      --speed: 28s;
-      --gap: 2rem;
-      --fontSize: 1rem;
-      font-size:var(--fontSize);
-      width:100%;
+      --speed: 28s; --gap: 2rem; --fontSize: 1rem;
+      font-size:var(--fontSize); width:100%;
     }
-    .banner .marquee{
-      display:flex; gap:var(--gap);
-      white-space:nowrap;
-      will-change:transform;
-      animation: marquee var(--speed) linear infinite;
-    }
+    .banner .marquee{ display:flex; gap:var(--gap); white-space:nowrap; will-change:transform; animation: marquee var(--speed) linear infinite; }
     .banner .sequence{ display:flex; gap:var(--gap); }
     .banner .token{ font-weight:800; letter-spacing:.5px; }
-
-    @media (min-width:900px){
-      .banner{ --gap:6rem; --speed:30s; --fontSize:1.05rem; }
-    }
-    @media (max-width:899px){
-      .banner{ --gap:2rem; --speed:18s; --fontSize:.95rem; }
-    }
-
-    @keyframes marquee{
-      from{transform:translateX(0);}
-      to{transform:translateX(-50%);}
-    }
+    @media (min-width:900px){ .banner{ --gap:6rem; --speed:30s; --fontSize:1.05rem; } }
+    @media (max-width:899px){ .banner{ --gap:2rem; --speed:18s; --fontSize:.95rem; } }
+    @keyframes marquee{ from{transform:translateX(0);} to{transform:translateX(-50%);} }
 
     /* Section 3 */
     #about{
-      min-height:90vh;background:linear-gradient(to right,var(--bg-light),var(--bg-dark));
+      min-height:100vh;background:linear-gradient(to right,var(--bg-light),var(--bg-dark));
       display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;
       padding:40px 16px;color:var(--fg);
     }
     #about h2{margin:0 0 28px;font-size:clamp(1.6rem,3.2vw,2.4rem);font-weight:800}
-    .about-grid{
-      display:grid;grid-template-columns:1fr;gap:40px;max-width:1100px;width:100%;
-      align-items:center;text-align:left;
-    }
+    .about-grid{display:grid;grid-template-columns:1fr;gap:40px;max-width:1100px;width:100%;align-items:center;text-align:left;}
     @media(min-width:900px){.about-grid{grid-template-columns:1fr 1fr}}
     .about-text p{margin:0 0 1em;font-size:1.1rem;line-height:1.6}
     .about-img{display:flex;align-items:center;justify-content:center}
@@ -168,10 +169,31 @@
       .about-text p{font-size:1rem;}
     }
 
+    /* Section 4 — same unified background */
+    #roadmap{
+      min-height:90vh;
+      background:linear-gradient(180deg,#000 0%, #0a0a0a 100%);
+      color:#efefef;
+      padding:56px 0;
+      display:flex;align-items:center;
+    }
+    #roadmap h2{margin:0 0 8px;font-size:clamp(1.6rem,3.2vw,2.4rem);font-weight:900;color:var(--bg-light);text-align:center}
+    #roadmap .sub{margin:0 0 28px;text-align:center;color:#cfcfcf}
+    .rm-grid{display:grid;grid-template-columns:1fr;gap:20px;max-width:1100px;margin:0 auto;padding:0 16px;width:100%;}
+    @media(min-width:900px){.rm-grid{grid-template-columns:1.2fr .8fr}}
+    .card{background:var(--card2);border:1px solid #1e1e1e;border-radius:12px;box-shadow:var(--shadow);padding:18px 16px;}
+    .phases{list-style:none;margin:0;padding:0;display:grid;gap:10px}
+    .phase{background:#121212;border:1px solid #1f1f1f;border-radius:10px;padding:12px}
+    .phase b{color:#fff}
+    .wp{display:flex;flex-direction:column;gap:14px;align-items:flex-start}
+    .wp a.wp-btn{display:inline-block;background:#000;color:var(--bg-light);border:3px solid var(--bg-light);border-radius:1vh;padding:14px 28px;font-size:18px;font-weight:800;text-decoration:none;box-shadow:var(--shadow);transition:.2s;cursor:pointer;}
+    .wp a.wp-btn:hover{background:var(--bg-light);color:#000;border-color:var(--bg-dark)}
+
+    /* Footer — same unified background */
     footer{
-      min-height:10vh;display:flex;align-items:center;justify-content:center;
-      background:linear-gradient(to right,var(--bg-light),var(--bg-dark));
-      color:var(--fg);text-align:center;
+      height:10vh;display:flex;align-items:center;justify-content:center;
+      background:linear-gradient(180deg,#000 0%, #0a0a0a 100%);
+      color:#efefef;text-align:center;
     }
   </style>
 </head>
@@ -182,8 +204,8 @@
       <a href="#buy" class="btn">Buy $CHSL</a>
       <a href="#about" class="btn">ChillSloth</a>
     </div>
-    <img src="0.Banner.png" alt="LazySloth Hero" class="hero-image">
-    <p class="tagline">Lazy but rich af</p>
+    <img src="0.Banner.png" alt="ChillSloth Hero" class="hero-image">
+    <p class="tagline">Chill but rich af</p>
     <div class="socials">
       <a href="https://www.instagram.com/chillslothii/" target="_blank"><img src="instagram.png" alt="Instagram"></a>
       <a href="https://x.com/ChillSlothII" target="_blank"><img src="twitter.png" alt="Twitter/X"></a>
@@ -191,7 +213,7 @@
     </div>
   </section>
 
-  <!-- Section 2 mit Banner -->
+  <!-- Section 2 -->
   <section id="buy">
     <div class="banner" aria-label="Scrolling $CHSL banner">
       <div class="marquee" id="marquee">
@@ -200,15 +222,18 @@
       </div>
     </div>
     <div class="container">
-      <h2>Get LazySloth</h2>
-      <p class="lead">Swap SOL for LAZY on Raydium — fast and easy.</p>
-      <a href="https://raydium.io/swap/?inputMint=sol&outputMint=2ZmAUqciYX8ThigFfjQaxw4YbhHUmSRUd5saG3Qgmoon" target="_blank" class="buy-btn">Buy on Raydium</a>
+      <h2>Change or Exchange on your wallet</h2>
+      <p class="lead">Swap SOL for CHSL on Raydium — fast and easy.</p>
+      <div class="cta-row">
+        <a href="https://raydium.io/swap/?inputMint=sol&outputMint=2ZmAUqciYX8ThigFfjQaxw4YbhHUmSRUd5saG3Qgmoon" target="_blank" class="buy-btn">Buy on Raydium</a>
+        <button type="button" class="buy-btn" id="copyMintBtn" data-mint="2ZmAUqciYX8ThigFfjQaxw4YbhHUmSRUd5saG3Qgmoon">Change on wallet</button>
+      </div>
       <h3>How to Buy</h3>
       <div class="steps">
         <div class="step"><b>1) Get a wallet</b>Install Phantom (or another Solana wallet) and create your address.</div>
         <div class="step"><b>2) Add SOL</b>Buy SOL on an exchange or directly in the wallet and transfer it.</div>
-        <div class="step"><b>3) Swap for LAZY</b>Use Raydium or your wallet swap with the official token address.</div>
-        <div class="step"><b>4) That’s it</b>Now you’re part of the LazySloth gang — take it slow!</div>
+        <div class="step"><b>3) Swap for CHSL</b>Use Raydium or your wallet swap with the official token address.</div>
+        <div class="step"><b>4) That’s it</b>Now you’re part of the ChillSloth gang — take it slow!</div>
       </div>
     </div>
   </section>
@@ -216,30 +241,60 @@
   <!-- Section 3 -->
   <section id="about">
     <div class="container">
-      <h2>About LazySloth</h2>
+      <h2>About ChillSloth</h2>
       <div class="about-grid">
         <div class="about-text">
-          <p>LazySloth is more than just a memecoin – we are a team of passionate software developers who have long dreamed of creating our own token. With LazySloth, this dream has finally become reality.</p>
+          <p>ChillSloth is more than just a memecoin – we are a team of passionate software developers who have long dreamed of creating our own token. With ChillSloth, this dream has finally become reality.</p>
           <p>Our mission is to give this coin real value and to build a strong, sustainable community. We believe in a project that is fun, inspiring, and at the same time has a solid future on the Solana blockchain.</p>
-          <p>For 2026, we are planning the release of our own game closely connected to LazySloth. With this, we aim not only to grow the token, but also to establish it in the world of gaming and entertainment.</p>
+          <p>For 2026, we are planning the release of our own game closely connected to ChillSloth. With this, we aim not only to grow the token, but also to establish it in the world of gaming and entertainment.</p>
         </div>
-        <div class="about-img"><img src="about.png" alt="About LazySloth"></div>
+        <div class="about-img"><img src="about.png" alt="About ChillSloth"></div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Section 4 -->
+  <section id="roadmap">
+    <div class="container" style="width:100%">
+      <h2>Roadmap & Whitepaper</h2>
+      <p class="sub">Transparent goals and a concise whitepaper overview.</p>
+      <div class="rm-grid">
+        <div class="card">
+          <ul class="phases">
+            <li class="phase"><b>Phase 1 — Launch 🚀</b><br/>Website, token launch, first listings, community setup.</li>
+            <li class="phase"><b>Phase 2 — Growth 🌱</b><br/>Meme contests, partnerships, influencer push, CEX outreach.</li>
+            <li class="phase"><b>Phase 3 — Utility 💎</b><br/>Mini-game teaser, NFT concept, tools for holders.</li>
+            <li class="phase"><b>Phase 4 — Game 🎮</b><br/>Mini-game teaser → iOS and Android mobile game targeted for late 2026.</li>
+          </ul>
+        </div>
+        <div class="card wp">
+          <div>
+            <b>Whitepaper (Short)</b>
+            <p style="margin:.4rem 0 0">Vision, tokenomics, roadmap & community strategy in a single PDF.</p>
+          </div>
+          <!-- ⬇️ Geänderter Link: öffnet ChillSloth_Whitepaper.pdf aus demselben Ordner -->
+          <a class="wp-btn" href="ChillSloth_Whitepaper.pdf" target="_blank" rel="noopener">Download Whitepaper (PDF)</a>
+          <small>Tip: Lege <code>ChillSloth_Whitepaper.pdf</code> in denselben Ordner wie diese Seite.</small>
+        </div>
       </div>
     </div>
   </section>
 
   <!-- Footer -->
   <footer>
-    <div class="container">© <span id="year"></span> LazySloth — Take it slow 🦥</div>
+    <div class="container">© <span id="year"></span> ChillSloth — Take it slow</div>
   </footer>
 
   <script>
+    // Auto-year
     document.getElementById("year").textContent = new Date().getFullYear();
 
+    // Banner fill (Section 2)
     (function(){
       const unitText = '$CHSL 🚀';
       const seqA = document.getElementById('seqA');
       const seqB = document.getElementById('seqB');
+      if(!seqA || !seqB) return;
       const makeToken = () => {
         const s = document.createElement('span');
         s.className = 'token';
@@ -260,6 +315,23 @@
       if (document.readyState === 'loading'){
         document.addEventListener('DOMContentLoaded', fill, { once:true });
       } else { fill(); }
+    })();
+
+    // Copy-mint button tooltip
+    (function(){
+      const btn = document.getElementById('copyMintBtn');
+      if(!btn) return;
+      const mint = btn.getAttribute('data-mint');
+      btn.addEventListener('click', async ()=>{
+        try{
+          await navigator.clipboard.writeText(mint);
+          btn.classList.add('copied');
+          setTimeout(()=>btn.classList.remove('copied'), 1200);
+        }catch(e){
+          btn.classList.add('copied');
+          setTimeout(()=>btn.classList.remove('copied'), 1200);
+        }
+      });
     })();
   </script>
 </body>
